# meilisearch-python

./: .buildinfo  .code-samples.meilisearch.yaml  .gitignore  .pylintrc  .yamllint.yml  CLAUDE.md  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE  Pipfile  README.md  bors.toml  context.llm  coucou  docker-compose.yml  genindex.html  index.html  meilisearch.html  meilisearch.models.html  modules.html  mypy.ini  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  tox.ini  upload.sh
.doctrees/: environment.pickle  index.doctree  meilisearch.doctree  meilisearch.models.doctree  modules.doctree
.github/: dependabot.yml  release-draft-template.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: check-release.sh
.github/workflows/: check.yml  documentation.yml  pre-release-tests.yml  pypi-publish.yml  release-drafter.yml  test.yml  tests.yml  update-version.yml
_modules/: index.html
_modules/meilisearch/: client.html  config.html  errors.html  index.html  task.html  version.html
_modules/meilisearch/models/: document.html  index.html  key.html  task.html
_sources/: meilisearch.models.rst.txt
create/: index.py
datasets/: bubble.sh  levenstein.sh  multimodal_movies.json  nested_movies.json  small_movies.json  songs.csv  songs_custom_delimiter.csv  songs_delimiter.csv  test
docs/: conf.py  index.rst  meilisearch.models.rst  meilisearch.rst  modules.rst
meilisearch/: __init__.py  _httprequests.py  _local_server.py  _meilisearch.py  _utils.py  client.py  config.py  document.py  errors.py  health.py  index.py  key.py  models.py  nop__main__.py  schema.py  search.py  setting.py  stat.py  stop_word.py  synonym.py  sys-info.py  sys_info.py  task.py  update.py  version.py
meilisearch/models/: client.py  document.py  dynamic_search_rule.py  embedders.py  index.py  key.py  search_rule.py  task.py  webhook.py
meilisearch/tests/: __init__.py  common.py  conftest.py  helper.py  test_accept_new_fields_meilisearch.py  test_client_meilisearch.py  test_displayed_attributes_meilisearch.py  test_distinct_attribute_meilisearch.py  test_document_meilisearch.py  test_health_meilisearch.py  test_index_meilisearch.py  test_key_meilisearch.py  test_ranking_rules_meilisearch.py  test_search_meilisearch.py  test_searchable_attributes_meilisearch.py  test_setting_meilisearch.py  test_settings_meilisearch.py  test_stat_meilisearch.py  test_stats_meilisearch.py  test_stop_words_meilisearch.py  test_synonyms_meilisearch.py  test_sys_info_meilisearch.py  test_update_meilisearch.py  test_updates_meilisearch.py  test_version_meilisearch.py  test_wait_for_pending_update.py
meilisearch/tests/client/: test_client.py  test_client_dumps.py  test_client_health_meilisearch.py  test_client_key_meilisearch.py  test_client_stats_meilisearch.py  test_client_sysinfo_meilisearch.py  test_client_version_meilisearch.py
meilisearch/tests/errors/: test_api_error_meilisearch.py  test_communication_error_meilisearch.py  test_timeout_error_meilisearch.py
meilisearch/tests/index/: test_index.py  test_index_document_meilisearch.py  test_index_search_meilisearch.py  test_index_stats_meilisearch.py  test_index_update_meilisearch.py  test_index_wait_for_pending_update.py
meilisearch/tests/settings/: test_settings.py  test_settings_accept_new_fields_meilisearch.py  test_settings_attributes_for_faceting_meilisearch.py  (+7 more)
tests/: __init__.py  common.py  conftest.py  test_client_meilisearch.py  test_document_meilisearch.py  test_health_meilisearch.py  test_index_meilisearch.py  test_indexes_meilisearch.py  test_key_meilisearch.py  test_search_meilisearch.py  test_settings_meilisearch.py  test_stats_meilisearch.py  test_stop_words_meilisearch.py  test_sys_info_meilisearch.py  test_updates_meilisearch.py  test_utils.py  test_version_meilisearch.py
tests/auto_launch/: conftest.py  test_client_auto_launch.py
tests/client/: test_chat_completions.py  test_client.py  test_client_auto_launch.py  test_client_dumps.py  test_client_dynamic_search_rules_meilisearch.py  test_client_exports.py  test_client_health_meilisearch.py  test_client_key_meilisearch.py  test_client_multi_search_meilisearch.py  test_client_network.py  test_client_render_template.py  test_client_sharding.py  test_client_stats_meilisearch.py  test_client_swap_meilisearch.py  test_client_task_meilisearch.py  test_client_tenant_token.py  test_client_token.py  test_client_update_document_by_functions.py  test_client_version_meilisearch.py  test_client_webhooks_meilisearch.py  test_clinet_snapshots.py  test_experimental_features.py  test_http_requests.py  test_multimodal.py  test_version.py
tests/errors/: test_api_error_meilisearch.py  test_communication_error_meilisearch.py  test_timeout_error_meilisearch.py
tests/index/: test_index.py  test_index_document_meilisearch.py  test_index_dynamic_search_rules_meilisearch.py  test_index_facet_search_meilisearch .py  test_index_facet_search_meilisearch.py  test_index_search_meilisearch.py  test_index_stats_meilisearch.py  test_index_task_meilisearch.py  test_index_update_meilisearch.py  test_index_wait_for_task.py
tests/models/: test_document.py  test_index.py
tests/settings/: test_setting_faceting.py  test_settings.py  test_settings_dictionary_meilisearch.py  test_settings_displayed_attributes_meilisearch.py  test_settings_distinct_attribute_meilisearch.py  test_settings_embedders.py  test_settings_facet_search.py  test_settings_filterable_attributes_meilisearch.py  test_settings_foreign_keys_meilisearch.py  test_settings_localized_attributes_meilisearch.py  test_settings_pagination.py  test_settings_prefix_search.py  test_settings_proximity_precision_meilisearch.py  test_settings_ranking_rules_meilisearch.py  test_settings_search_cutoff_meilisearch.py  test_settings_searchable_attributes_meilisearch.py  test_settings_sortable_attributes_meilisearch.py  test_settings_stop_words_meilisearch.py  test_settings_synonyms_meilisearch.py  test_settings_text_separators_meilisearch.py  test_settings_typo_tolerance_meilisearch.py
