[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "meilisearch"
description = "The python client for Meilisearch API."
license = { text = "MIT" }
requires-python = ">=3.7"
authors = [
  { name = "Charlotte Vermandel", email = "charlotte@meilisearch.com" },
]
keywords = [
  "search",
  "python",
  "meilisearch",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "camel-converter[pydantic]",
]
dynamic = ['version']

[tool.setuptools.dynamic]
version = {attr = "meilisearch.version.__version__"}

[tool.setuptools.packages.find]
include = ["meilisearch*"]
exclude = ["docs*", "tests*"]

[tool.setuptools.package-data]
meilisearch = ["py.typed"]

[project.urls]
Meilisearch_Documentation = "https://docs.meilisearch.com/"
Documentation = "https://meilisearch.github.io/meilisearch-python/"
Homepage = "https://github.com/meilisearch/meilisearch-python"

[tool.black]
line-length = 100
target-version = ['py37']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | \venv
  | _build
  | buck-out
  | build
  | dist
  | setup.py
)/
'''

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["meilisearch", "tests"]

[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pylint]
[tool.pylint.MASTER]
load-plugins = [
    'pylint.extensions.bad_builtin',
]

[tool.pylint.'DEPRECATED_BUILTINS']
bad-functions=[
  "map",
  "filter",
  "input"
]

[tool.pylint.'BASIC']
const-rgx = "(([A-Z_][A-Z0-9_]*)|(__.*__))$"
attr-rgx = "[a-z_][a-z0-9_]{2,}$"
module-rgx = "(([a-z_][a-z0-9_]*)|([A-Z][a-zA-Z0-9]+))$"
method-rgx = "[a-z_][a-z0-9_]{2,}$"

[tool.pylint.'DESIGN']
max-args = 10
max-public-methods = 25

[tool.pylint.'FORMAT']
max-module-lines=2000

[tool.pylint.'MESSAGES CONTROL']
disable=[
  "attribute-defined-outside-init",
  "duplicate-code",
  "missing-docstring",
  "too-few-public-methods",
  "line-too-long",
]
enable=[
  "use-symbolic-message-instead",
  "fixme",
]

[tool.pylint.'REPORTS']
reports=false
