[project]
name = "meilisearch"
description = "The python client for Meilisearch API."
authors = [{ name = "Clémentine", email = "clementine@meilisearch.com" }]
requires-python = ">=3.9"
license = { text = "MIT" }
keywords = [
    "search",
    "python",
    "meilisearch",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "camel-converter[pydantic]",
]
dynamic = ["version"]

[project.urls]
Meilisearch_Documentation = "https://www.meilisearch.com/docs"
Documentation = "https://meilisearch.github.io/meilisearch-python/"
Homepage = "https://github.com/meilisearch/meilisearch-python"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "tomli ; python_version < '3.11'",
]

test = [
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
    "tox>=4.30.3",
]

lint = [
    "mypy>=1.19.1",
    "pylint>=v3.3.9",
    "ruff>=0.15.17",
    "isort>=6.1.0",
    "types-requests",
]

docs = [
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=3.1.0",
]

[tool.uv]
fork-strategy = "fewest"
default-groups = [ "dev", "test", "lint"]

[tool.setuptools.dynamic]
version = {attr = "meilisearch.version.__version__"}

[tool.setuptools.packages.find]
include = ["meilisearch*"]
exclude = ["docs*", "tests*"]

[tool.setuptools.package-data]
meilisearch = ["py.typed"]

[tool.ruff]
line-length = 100

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["meilisearch", "tests"]

[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false
[tool.pylint.MASTER]
load-plugins = [
    'pylint.extensions.bad_builtin',
]

[tool.pylint.'DEPRECATED_BUILTINS']
bad-functions=[
  "map",
  "filter",
  "input"
]

[tool.pylint.'BASIC']
const-rgx = "(([A-Z_][A-Z0-9_]*)|(__.*__))$"
attr-rgx = "[a-z_][a-z0-9_]{2,}$"
module-rgx = "(([a-z_][a-z0-9_]*)|([A-Z][a-zA-Z0-9]+))$"
method-rgx = "[a-z_][a-z0-9_]{2,}$"

[tool.pylint.'DESIGN']
max-args = 10
max-public-methods = 25

[tool.pylint.'FORMAT']
max-module-lines=2000

[tool.pylint.'MESSAGES CONTROL']
disable=[
  "attribute-defined-outside-init",
  "duplicate-code",
  "missing-docstring",
  "too-few-public-methods",
  "line-too-long",
  "too-many-positional-arguments",
]
enable=[
  "use-symbolic-message-instead",
  "fixme",
]

[tool.pylint.'REPORTS']
reports=false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=meilisearch --cov-report term-missing"
