[project]
name = "meilisearch"
description = "The python client for Meilisearch API."
authors = [{ name = "Clémentine", email = "clementine@meilisearch.com" }]
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = [
    "search",
    "python",
    "meilisearch",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests",
    "camel-converter[pydantic]",
]
dynamic = ["version"]

[project.urls]
Meilisearch_Documentation = "https://www.meilisearch.com/docs"
Documentation = "https://meilisearch.github.io/meilisearch-python/"
Homepage = "https://github.com/meilisearch/meilisearch-python"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "tomli ; python_version < '3.11'",
]

test = [
    "pytest>=8.4.2",
    "pytest-cov>=7.1.0",
    "tox>=4.30.3",
]

lint = [
    "mypy>=1.19.1",
    "ruff>=0.15.17",
]

docs = [
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=3.1.0",
]

[tool.uv]
fork-strategy = "fewest"
default-groups = [ "dev", "test", "lint"]

[tool.setuptools.dynamic]
version = {attr = "meilisearch.version.__version__"}

[tool.setuptools.packages.find]
include = ["meilisearch*"]
exclude = ["docs*", "tests*"]

[tool.setuptools.package-data]
meilisearch = ["py.typed"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = [
  "E",      # pycodestyle errors
  "W",      # pycodestyle warnings
  "F",      # pyflakes
  "B",      # flake8-bugbear
  "I",      # isort
  "UP",     # pyupgrade
  "PL",     # pylint
  "T201",   # flake8-print: disallow `print`
  "T203",   # flake8-print: disallow `pprint`
  "RUF022", # Ruff: unsorted `__all__`
  "RUF023", # Ruff: unsorted `__slots__`
]
ignore = [
  # Recommended ignores by ruff when using the formatter
  "E501",
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
]

[tool.ruff.lint.pylint]
max-args = 10
max-public-methods = 25
allow-magic-value-types = ["int", "float", "str", "bytes"]

[tool.mypy]
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=meilisearch --cov-report term-missing"
