[metadata]
name = meilisearch
# This line will need to be changed when the project is moved to the meilisearch org
url = https://github.com/bidoubiwa/meilisearch-python
version = 0.0.1
description = The python client for MeiliSearch API.
long_description = file: README.md
long_description_content_type = text/markdown
platform = any
keywords = search, python, meilisearch
license = MIT
author = Charlotte Vermandel
author_email = charlotte@meilisearch.com
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

# TODO: Verify if this project is compatible with all the above versions

[options]
zip_safe = True
include_package_data = True
;install_requires =
;    a_package==0.3.0
# TODO: Add required packages here. Like in the requirements.txt